withType