@@ -32,7 +32,7 @@ dependencies {
 }
 
 tasks {
-  test {
+  withType<Test>().configureEach {
     // required on jdk17
     jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
     jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
@@ -40,9 +40,6 @@ tasks {
   }
 
   val testStableSemconv by registering(Test::class) {
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-    jvmArgs("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED")
-    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
     jvmArgs("-Dotel.semconv-stability.opt-in=database")
   }
 
