@@ -35,7 +35,7 @@ dependencies {
 }
 
 tasks {
-  test {
+  withType<Test>().configureEach {
     // TODO run tests both with and without experimental span attributes
     jvmArgs("-Dotel.instrumentation.couchbase.experimental-span-attributes=true")
 
@@ -45,9 +45,6 @@ tasks {
   }
 
   val testStableSemconv by registering(Test::class) {
-    jvmArgs("-Dotel.instrumentation.couchbase.experimental-span-attributes=true")
-    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
-    jvmArgs("-XX:+IgnoreUnrecognizedVMOptions")
     jvmArgs("-Dotel.semconv-stability.opt-in=database")
   }
 
